# graphql-server

./: Cargo.toml  README.md  run.sh
src/: main.rs
src/schema/: health.rs  mod.rs
src/server/: routes.rs
