[package]
name = "graphql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

# Async
tokio = { version = "1.17.0", features = ["full"] }

# Serialization
serde_json = "1.0.79"

# Web
warp = "0.3.2"

# GraphQL
async-graphql = "2.11.3"
async-graphql-warp = "2.11.3"